--- a/aoc/2024-13.html
+++ b/aoc/2024-13.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 13 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,37 +154,127 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-13"><a class="header" href="#advent-of-code---year-2024-day-13">Advent of code - Year 2024 Day 13</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/13">day 13</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming language</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readability of the code.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-<li><a href="2024-6.html">Day 6</a></li>
-<li><a href="2024-7.html">Day 7</a></li>
-<li><a href="2024-8.html">Day 8</a></li>
-<li><a href="2024-9.html">Day 9</a></li>
-<li><a href="2024-10.html">Day 10</a></li>
-<li><a href="2024-11.html">Day 11</a></li>
-<li><a href="2024-12.html">Day 12</a></li>
-<li><a href="2024-13.html">Day 13</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>We actually have the following system of equalities.</p>
+<p>\[
+\begin{array}{c c c}
+a_0 x &amp;+ b_0 y  &amp;= p_0 \
+a_1 x &amp;+ b_1 y  &amp;= p_1 \
+\end{array}
+\]</p>
+<p>Which can be simplified to evaluate the following:</p>
+<p>\[
+y = \frac{p_1 a_0 - a_1 p_0}{b_1 a_0 - a_1 b_0}
+\]</p>
+<p>\[
+x = \frac{p_0 - b_0 x}{a_0}
+\]</p>
+<p>Lastly we check if it is indeed true.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we use the same fact.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+const Invalid = -1
+
+type Machine struct {
+  a     [2]int
+  b     [2]int
+  prize [2]int
+}
+
+func read_file(file_path string) []Machine {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  var machines []Machine
+  regex := regexp.MustCompile("Button A: X\\+([0-9]+), Y\\+([0-9]+)\\nButton B: X\\+([0-9]+), Y\\+([0-9]+)\\nPrize: X=([0-9]+), Y=([0-9]+)")
+  found := regex.FindAllStringSubmatch(string(content), -1)
+  for _, f := range found {
+    a_x, _ := strconv.Atoi(f[1])
+    a_y, _ := strconv.Atoi(f[2])
+    b_x, _ := strconv.Atoi(f[3])
+    b_y, _ := strconv.Atoi(f[4])
+    prize_x, _ := strconv.Atoi(f[5])
+    prize_y, _ := strconv.Atoi(f[6])
+    machine := Machine{
+      a:     [2]int{a_x, a_y},
+      b:     [2]int{b_x, b_y},
+      prize: [2]int{prize_x, prize_y},
+    }
+    machines = append(machines, machine)
+  }
+  return machines
+}
+
+func optimize(machine Machine) int {
+  j := (machine.prize[1]*machine.a[0] - machine.a[1]*machine.prize[0]) / (machine.b[1]*machine.a[0] - machine.a[1]*machine.b[0])
+  i := (machine.prize[0] - (machine.b[0] * j)) / machine.a[0]
+  if i*machine.a[0]+j*machine.b[0] == machine.prize[0] &amp;&amp; i*machine.a[1]+j*machine.b[1] == machine.prize[1] {
+    return i*3 + j
+  }
+  return Invalid
+}
+
+func part_one() {
+  var result int
+  start := time.Now()
+  machines := read_file("INPUT")
+  for _, machine := range machines {
+    opt := optimize(machine)
+    if opt != Invalid {
+      result += opt
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 1 [", end.Sub(start), "]:", result)
+}
+
+func part_two() {
+  var result int
+  start := time.Now()
+  machines := read_file("INPUT")
+  for _, machine := range machines {
+    machine.prize[0] += 10000000000000
+    machine.prize[1] += 10000000000000
+    opt := optimize(machine)
+    if opt != Invalid {
+      result += opt
+    }
+  }
+  end := time.Now()
+  fmt.Println("Part 2 [", end.Sub(start), "]:", result)
+}
+
+func main() {
+  fmt.Println("Year 2024 day 13 - Claw Contraption")
+  part_one()
+  part_two()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-12.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -194,11 +284,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-12.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
