--- a/aoc/2021-8.html
+++ b/aoc/2021-8.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2021 day 7 - Personal page</title>
+        <title>Year 2021 day 8 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,74 +154,69 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2021-day-7"><a class="header" href="#advent-of-code---year-2021-day-7">Advent of code - Year 2021 Day 7</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2021/day/7">day 7</a>. Go back to year <a href="2021.html">2021</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2021-day-8"><a class="header" href="#advent-of-code---year-2021-day-8">Advent of code - Year 2021 Day 8</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2021/day/8">day 8</a>. Go back to year <a href="2021.html">2021</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>In both cases we try all possibilities and find the optimum.</p>
+<p>For the first part we only compute the number of strings which have certain lengths: <code>2</code>, <code>3</code>, <code>4</code> and <code>7</code>.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p>In the second part we only need to rewrite the operator for computing the distance.</p>
 <h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
 <pre><code class="language-go">package main
 
 import (
   "fmt"
   "log"
-  "math"
   "os"
-  "regexp"
-  "sort"
-  "strconv"
+  "strings"
   "time"
 )
 
 const (
-  Blue   = "\033[1;34m"
-  Yellow = "\033[1;33m"
-  Green  = "\033[1;32m"
-  Reset  = "\033[0m"
+  Blue   = "[1;34m"
+  Yellow = "[1;33m"
+  Green  = "[1;32m"
+  Reset  = "[0m"
 )
 
 func print_result(dur time.Duration, part, result int) {
   fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
 }
 
-func read_file(file_path string) []int {
+type Note struct {
+  notes []string
+  display []string
+}
+
+func read_file(file_path string) []Note {
   content, err := os.ReadFile(file_path)
   if err != nil {
     log.Fatal(err)
   }
-  regex := regexp.MustCompile("[0-9]+")
-  found := regex.FindAllString(string(content), -1)
-  var horizontal_positions []int
-  for _, f := range found {
-    nr, _ := strconv.Atoi(f)
-    horizontal_positions = append(horizontal_positions, nr)
-  }
-  return horizontal_positions
-}
-
-func optimize_distance(numbers []int, op func(int, int) int) int {
-  sort.Ints(numbers)
-  result := op(numbers[0], numbers[len(numbers)-1]) * len(numbers)
-  for x := numbers[0]; x &lt; numbers[len(numbers)-1]; x++ {
-    sum := 0
-    for _, pos := range numbers {
-      sum += op(x, pos)
+  var notes []Note
+  for _, line := range strings.Split(string(content), "\n") {
+    if len(line) == 0 {
+      continue
     }
-    if sum &lt; result {
-      result = sum
-    }
+    split := strings.Split(line, " | ")
+    var note Note
+    note.notes = strings.Split(split[0], " ")
+    note.display = strings.Split(split[1], " ")
+    notes = append(notes, note)
   }
-  return result
+  return notes
 }
 
 func part_one() {
   var result int
   start := time.Now()
-  horizontal_positions := read_file("INPUT")
-  dist := func(x, y int) int { return int(math.Abs(float64(x - y))) }
-  result = optimize_distance(horizontal_positions, dist)
+  notes := read_file("INPUT")
+  for _, note := range notes {
+    for _, digit := range note.display {
+      if len(digit) == 2 || len(digit) == 3 || len(digit) == 4 || len(digit) == 7 {
+        result += 1
+      }
+    }
+  }
   end := time.Now()
   print_result(end.Sub(start), 1, result)
 }
@@ -229,18 +224,12 @@ func part_one() {
 func part_two() {
   var result int
   start := time.Now()
-  horizontal_positions := read_file("INPUT")
-  scaled_dist := func(x, y int) int {
-    diff := int(math.Abs(float64(x - y)))
-    return (diff * (diff + 1)) / 2
-  }
-  result = optimize_distance(horizontal_positions, scaled_dist)
   end := time.Now()
   print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "7 - The Treachery of Whales" + Reset)
+  fmt.Println("Year " + Green + "2021" + Reset + " day " + Green + "8 - Claw Contraption" + Reset)
   part_one()
   part_two()
 }
@@ -250,11 +239,11 @@ func main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2021-6.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2021-7.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2021-8.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2021-10.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -264,11 +253,11 @@ func main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2021-6.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2021-7.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2021-8.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2021-10.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
