--- a/aoc/2024-15.html
+++ b/aoc/2024-15.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 day 14 - Personal page</title>
+        <title>Year 2024 day 15 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,13 +154,14 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024-day-14"><a class="header" href="#advent-of-code---year-2024-day-14">Advent of code - Year 2024 Day 14</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2024/day/14">day 14</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-15"><a class="header" href="#advent-of-code---year-2024-day-15">Advent of code - Year 2024 Day 15</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/15">day 15</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>Note that we can jump the whole <code>100</code> steps by <code>modulo</code> algebra. And then we split into 4 cases of different quadrants. Then multiply these quadrants.</p>
+<p>In the first part we simulate the robot step by step. If there is <code>Space</code> move, if there is a <code>Wall</code> stop and if there is a <code>Box</code> then try to move all boxes, which is done by following the line of boxing and potentially placing the first box to the end, hence the same operation as if we moved the whole row of boxes.</p>
+<p>After these procedures we compute <code>GPS</code>.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p>In this part we proceed one step at a time by simply checking if there is a long enough line of robots.</p>
+<p>For the second part we proceed very similarly. Only change is when dealing with boxes. In a horizontal way we do the same thing, except that we do not put the box to the end, but instead move shift the row of boxes. For the vertical move we will only consider the case that we ran into a left part of the box (otherwise we switch to the left part). Then we check if both parts can be moved or not by recursion. After we check the whole sequence of boxes and get <code>true</code> answer we then may move all boxes proceeding in the same matter.</p>
 <h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
 <pre><code class="language-go">package main
 
@@ -168,16 +169,15 @@ import (
   "fmt"
   "log"
   "os"
-  "regexp"
-  "strconv"
+  "strings"
   "time"
 )
 
 const (
-  Blue   = "\033[1;34m"
-  Yellow = "\033[1;33m"
-  Green  = "\033[1;32m"
-  Reset  = "\033[0m"
+  Blue   = "[1;34m"
+  Yellow = "[1;33m"
+  Green  = "[1;32m"
+  Reset  = "[0m"
 )
 
 func print_result(dur time.Duration, part, result int) {
@@ -185,84 +185,200 @@ func print_result(dur time.Duration, part, result int) {
 }
 
 const (
-  Width  = 101
-  Height = 103
+  Space = 0
+  Wall = 1
+  Box = 2
+  LeftBox = 3
+  RightBox = 4
 )
 
-type Robot struct {
-  position [2]int
-  velocity [2]int
-}
-
-func mod(nr, mod int) int {
-  return (nr%mod + mod) % mod
-}
-
-func (r *Robot) move(iter int) {
-  r.position[0] += r.velocity[0] * iter
-  r.position[1] += r.velocity[1] * iter
-  r.position[0] = mod(r.position[0], Width)
-  r.position[1] = mod(r.position[1], Height)
-}
-
-func read_file(file_path string) []Robot {
+func read_file(file_path string) ([][]int8, [2]int, [][2]int) {
   content, err := os.ReadFile(file_path)
   if err != nil {
     log.Fatal(err)
   }
-  var robots []Robot
-  regex := regexp.MustCompile("p=([\\-0-9]+),([\\-0-9]+) v=([\\-0-9]+),([\\-0-9]+)")
-  found := regex.FindAllStringSubmatch(string(content), -1)
-  for _, f := range found {
-    p_x, _ := strconv.Atoi(f[1])
-    p_y, _ := strconv.Atoi(f[2])
-    v_x, _ := strconv.Atoi(f[3])
-    v_y, _ := strconv.Atoi(f[4])
-    robot := Robot{
-      position: [2]int{p_x, p_y},
-      velocity: [2]int{v_x, v_y},
+  var m [][]int8
+  var position [2]int
+  var moves [][2]int
+  for i, line := range strings.Split(string(content), "\n") {
+    if len(line) == 0 {
+      continue
     }
-    robots = append(robots, robot)
+    if line[0] == '#' {
+      row := make([]int8, len(line))
+      for j, char := range strings.Split(line, "") {
+        switch char {
+          case "#":
+            row[j] = Wall
+          case "O":
+            row[j] = Box
+          case "@":
+            row[j] = Space
+            position = [2]int{i,j}
+          case ".":
+            row[j] = Space
+        }
+      }
+      m = append(m, row)
+    } else {
+      for _, char := range strings.Split(line, "") {
+        switch char {
+          case "&gt;":
+            moves = append(moves, [2]int{0,1})
+          case "&lt;":
+            moves = append(moves, [2]int{0,-1})
+          case "^":
+            moves = append(moves, [2]int{-1,0})
+          case "v":
+            moves = append(moves, [2]int{1,0})
+        }
+      }
+    }
   }
-  return robots
+  return m, position, moves
 }
 
-func is_tree(bitmap [Width][Height]bool) bool {
-  for i := 0; i &lt; Height; i++ {
-    for j := 0; j &lt; Width; j++ {
-      k := j
-      for ; k &lt; Width &amp;&amp; bitmap[k][i]; k++ {
+func wider_map(m [][]int8) [][]int8{
+  wider := make([][]int8, len(m))
+  for i, row := range m {
+    var new_row []int8
+    for j := range row {
+      switch row[j] {
+        case Space:
+          new_row = append(new_row, Space, Space)
+        case Wall:
+          new_row = append(new_row, Wall, Wall)
+        case Box:
+          new_row = append(new_row, LeftBox, RightBox)
       }
-      if k-j &gt; 30 {
-        return true
+    }
+    wider[i] = new_row
+  }
+  return wider
+}
+
+func up_down_move(m *[][]int8, box [2]int, move [2]int) {
+  if (*m)[box[0]][box[1]] == LeftBox {
+    if (*m)[box[0] + move[0]][box[1]] == LeftBox || (*m)[box[0] + move[0]][box[1]] == RightBox{
+      up_down_move(m, [2]int{box[0] + move[0], box[1]}, move)
+    }
+    if (*m)[box[0] + move[0]][box[1] + 1] == LeftBox {
+      up_down_move(m, [2]int{box[0] + move[0], box[1] + 1}, move)
+    }
+    (*m)[box[0]][box[1]] = Space
+    (*m)[box[0]][box[1] + 1] = Space
+    (*m)[box[0] + move[0]][box[1]] = LeftBox
+    (*m)[box[0] + move[0]][box[1] + 1] = RightBox
+  } else if (*m)[box[0]][box[1]] == RightBox {
+    up_down_move(m, [2]int{box[0], box[1] - 1}, move)
+  }
+}
+
+func up_down_check(m *[][]int8, box [2]int, move [2]int) bool {
+  if box[0] + move[0] &lt; 0 || box[0] + move[0] &gt;= len(*m) {
+    return false
+  }
+  plausible := true
+  if (*m)[box[0]][box[1]] == LeftBox {
+    if (*m)[box[0] + move[0]][box[1]] == LeftBox || (*m)[box[0] + move[0]][box[1]] == RightBox {
+      plausible = plausible &amp;&amp; up_down_check(m, [2]int{box[0] + move[0], box[1]}, move)
+    }
+    if (*m)[box[0] + move[0]][box[1] + 1] == LeftBox {
+      plausible = plausible &amp;&amp; up_down_check(m, [2]int{box[0] + move[0], box[1] + 1}, move)
+    }
+    if (*m)[box[0] + move[0]][box[1]] == Space &amp;&amp; (*m)[box[0] + move[0]][box[1] + 1] == Space {
+      plausible = plausible &amp;&amp; true
+    }
+    if (*m)[box[0] + move[0]][box[1]] == Wall || (*m)[box[0] + move[0]][box[1] + 1] == Wall {
+      plausible = false
+    }
+  } else if (*m)[box[0]][box[1]] == RightBox {
+    plausible = plausible &amp;&amp; up_down_check(m, [2]int{box[0], box[1] - 1}, move)
+  }
+  return plausible
+}
+
+func move_larger_box(m *[][]int8, box [2]int, move [2]int) bool {
+  if move[0] == 0 {
+    i := 0
+    for ;box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; ((*m)[box[0]][box[1] + i * move[1]] == LeftBox || (*m)[box[0]][box[1] + i * move[1]] == RightBox); i += 1 {
+    }
+    if box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0]][box[1] + i * move[1]] == Space {
+      (*m)[box[0]][box[1]] = Space
+      (*m)[box[0]][box[1] + i* move[1]] = (*m)[box[0]][box[1] + (i - 1) * move[1]]
+      for j := 1; j &lt; i; j++ {
+        if (*m)[box[0]][box[1] + j * move[1]] == RightBox {
+          (*m)[box[0]][box[1] + j * move[1]] = LeftBox
+        } else {
+          (*m)[box[0]][box[1] + j * move[1]] = RightBox
+        }
       }
+      return true
+    }
+  } else {
+    if up_down_check(m, box, move) {
+      up_down_move(m, box, move)
+      return true
     }
   }
   return false
 }
 
-func part_one() {
-  var result int
-  start := time.Now()
-  robots := read_file("INPUT")
-  var quadrants [4]int
-  for i := range robots {
-    robots[i].move(100)
-    if robots[i].position[0] &lt; Width/2 {
-      if robots[i].position[1] &lt; Height/2 {
-        quadrants[0] += 1
-      } else if robots[i].position[1] &gt; Height/2 {
-        quadrants[1] += 1
+func move_box(m *[][]int8, box [2]int, move [2]int) bool {
+  i := 0
+  for ; box[0] + i * move[0] &lt; len(*m) &amp;&amp; box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0] + i * move[0]][box[1] + i * move[1]] == Box; i++ {
+  }
+  if box[0] + i * move[0] &lt; len(*m) &amp;&amp; box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0] + i * move[0]][box[1] + i * move[1]] == Space {
+    (*m)[box[0]][box[1]] = Space
+    (*m)[box[0] + i * move[0]][box[1] + i * move[1]] = Box
+    return true
+  }
+  return false
+}
+
+func single_step(m *[][]int8, position *[2]int, move [2]int) {
+  new_position := [2]int{
+    (*position)[0] + move[0],
+    (*position)[1] + move[1],
+  }
+  switch (*m)[new_position[0]][new_position[1]] {
+    case Space:
+      *position = new_position
+    case Wall:
+      return
+    case Box:
+      if move_box(m, new_position, move) {
+        *position = new_position
       }
-    } else if robots[i].position[0] &gt; Width/2 {
-      if robots[i].position[1] &lt; Height/2 {
-        quadrants[2] += 1
-      } else if robots[i].position[1] &gt; Height/2 {
-        quadrants[3] += 1
+    case LeftBox:
+      fallthrough
+    case RightBox:
+      if move_larger_box(m, new_position, move) {
+        *position = new_position
+      }
+  }
+}
+
+func simulate(m *[][]int8, position *[2]int, moves [][2]int) int {
+  for _, move := range moves {
+    single_step(m, position, move)
+  }
+  sum := 0
+  for i, row := range (*m) {
+    for j := range row {
+      if row[j] == Box || row[j] == LeftBox {
+        sum += i*100 + j
       }
     }
   }
-  result = quadrants[0] * quadrants[1] * quadrants[2] * quadrants[3]
+  return sum
+}
+
+func part_one() {
+  var result int
+  start := time.Now()
+  m, position, moves := read_file("INPUT")
+  result = simulate(&amp;m, &amp;position, moves)
   end := time.Now()
   print_result(end.Sub(start), 1, result)
 }
@@ -270,24 +386,16 @@ func part_one() {
 func part_two() {
   var result int
   start := time.Now()
-  robots := read_file("INPUT")
-  for t := 1; ; t++ {
-    var bitmap [Width][Height]bool
-    for i := range robots {
-      robots[i].move(1)
-      bitmap[robots[i].position[0]][robots[i].position[1]] = true
-    }
-    if is_tree(bitmap) {
-      result = t
-      break
-    }
-  }
+  m, position, moves := read_file("INPUT")
+  wider := wider_map(m)
+  position[1] *= 2
+  result = simulate(&amp;wider, &amp;(position), moves)
   end := time.Now()
   print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "14 - Restroom Redoubt" + Reset)
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "15 - Claw Contraption" + Reset)
   part_one()
   part_two()
 }
@@ -297,11 +405,11 @@ func main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-13.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-14.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-15.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -311,11 +419,11 @@ func main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-13.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-14.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-15.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
