--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -175,6 +175,7 @@
 <li><a href="2024-12.html">Day 12</a></li>
 <li><a href="2024-13.html">Day 13</a></li>
 <li><a href="2024-14.html">Day 14</a></li>
+<li><a href="2024-15.html">Day 15</a></li>
 </ul>
 
                     </main>
